# securedrop-client

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pyre_configuration  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.black  Doxyfile  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  build-requirements.txt  changelog.md  create_dev_data.py  createdb.py  dev-requirements.in  dev-requirements.txt  entrypoint.sh  ex2.py  example.py  journal-example.py  mac-dev-requirements.txt  oqubes-logging  oqubeslogging.py  pyproject.toml  pytest.ini  qlabel_test.py  requirements-build.txt  requirements-dev.txt  requirements.in  requirements.txt  run.py  run.sh  sd-proxy.py  sd-rsyslog  sd-rsyslog-example.conf  (+8 more)
client/: .git-blame-ignore-revs  CONTRIBUTING.md  Doxyfile  MANIFEST.in  Makefile  README.md  alembic.ini  babel.cfg  build-requirements.txt  create_dev_data.py  project.json  pyproject.toml  run.sh  setup.py  test-functional.sh  update_version.sh
client/.circleci/: config.yml
client/.githooks/: pre-commit
client/.github/ISSUE_TEMPLATE/: release.md
client/.semgrep/: custom-rules.yml
client/alembic/: env.py
client/alembic/versions/: 414627c04463_draftreply_add_column_for_sending_pid.py  d7c8af95bc8e_initial.py
client/files/: sd-app-qubes-gpg-domain.sh  securedrop-client  usr.bin.securedrop-client
client/scripts/: verify-mo.py
client/securedrop_client/: __init__.py  app.py  config.py  crypto.py  database.py  db.py  export.py  export_status.py  file_status.py  logic.py  queue.py  storage.py  sync.py  utils.py
client/securedrop_client/api_jobs/: base.py  downloads.py  seen.py  sources.py  sync.py  updatestar.py  uploads.py
client/securedrop_client/gui/: __init__.py  actions.py  datetime_helpers.py  main.py  shortcuts.py  widgets.py
client/securedrop_client/locale/: messages.pot
client/securedrop_client/resources/: __init__.py
client/securedrop_client/sdk/: README.md  __init__.py  progress.py  sdlocalobjects.py  timestamps.py
client/securedrop_client/state/: __init__.py  domain.py  state.py
client/stubs/: qubesdb.pyi
client/tests/: conftest.py  factory.py  helper.py  test_alembic.py  test_app.py  test_config.py  test_conversation.py  test_crypto.py  test_crypto_gzip.py  test_export.py  test_logic.py  test_models.py  test_queue.py  test_resources.py  test_storage.py  test_sync.py  test_utils.py
client/tests/api_jobs/: test_base.py  test_downloads.py  test_sources.py  test_sync.py  test_updatestar.py  test_uploads.py
client/tests/files/: test-doc.gz.gpg  test-key.gpg.asc
client/tests/functional/: test_delete_source.py  test_delete_sources.py  test_deleted_file_filewidget.py  test_download_file.py  test_export_file_dialog.py  test_export_file_wizard.py  test_export_wizard.py  test_login.py  test_logout.py  test_offline_delete_source.py  test_offline_login.py  test_offline_read_conversation.py  test_offline_send_reply.py  test_offline_star_source.py  test_receive_message.py  test_seen.py  test_send_reply.py  test_star_source.py  test_user_profile_menu.py
client/tests/gui/: test_actions.py  test_datetime_helpers.py  test_main.py  test_shortcuts.py  test_widgets.py
client/tests/integration/: conftest.py  test_placeholder.py  test_styles_file_download_button.py  test_styles_modal_dialog_button.py  test_styles_modal_dialog_error_details.py  test_styles_reply_status_bar.py  test_styles_sdclient.py  test_styles_speech_bubble_message.py  test_styles_speech_bubble_status_bar.py
client/tests/migrations/: test_d7c8af95bc8e.py
client/tests/sdk/: README.md  conftest.py  encrypted_msg.asc  test_api.py  test_apiproxy.py  test_shared.py  test_timestamps.py  utils.py
client/tests/state/: test_domain.py  test_state.py
export/: .gitignore  MANIFEST.in  Makefile  README.md  build-requirements.txt  changelog.md  pyproject.toml  setup.py  update_version.sh
export/.semgrep/: custom-rules.yaml
export/files/: 60-securedrop-export.preset  application-x-sd-export.xml  send-to-usb.desktop
export/securedrop_export/: __init__.py  archive.py  command.py  directory.py  main.py  status.py
export/securedrop_export/disk/: __init__.py  cli.py  legacy_status.py  service.py  status.py  volume.py
export/securedrop_export/print/: __init__.py  exceptions.py  libreoffice_supported_mimetypes.py  print_dialog.py  service.py  status.py
export/systemd/: 60-securedrop-export.preset
export/tests/: lsblk_sample.py  test_archive.py  test_directory.py  test_exceptions.py  test_main.py
export/tests/disk/: test_cli.py  test_service.py  (+1 more)
keyring/: Makefile  apt_freedom_press.sources  pyproject.toml
keyring/tests/: test_sources.py
log/: .flake8  MANIFEST.in  Makefile  README.md  build-requirements.txt  changelog.md  ex1.py  ex2.py  example.py  journal-example.py  project.json  pyproject.toml  sd-rsyslog  securedrop-log  securedrop-log-saver  securedrop-log.service  securedrop-redis-log  setup.py  update_version.sh
log/.circleci/: config.yml
log/log_client_files/: sd-rsyslog
log/log_server/: log_saver.py  redis_log.py
log/securedrop_log/: __init__.py
log/tests/: test_log_saver.py  test_logger.py  test_redis_log.py
proxy/: .git-blame-ignore-revs  .gitignore  Cargo.toml  MANIFEST.in  Makefile  README.md  build-requirements.txt  build.rs  changelog.md  configure_onion_service.py  entrypoint.sh  pyproject.toml  setup.cfg  setup.py  update_version.sh  usr.bin.securedrop-proxy  wrapper.h
proxy/examples/: bad.json  html.json  posts.json
proxy/fixtures/: basic_proxy_functionality.yaml  main_input_body.yaml  main_input_headers.yaml  proxy_200_valid_path.yaml  proxy_404.yaml  proxy_bad_request.yaml  proxy_callbacks.yaml  proxy_cannot_connect.yaml  proxy_internal_error.yaml  proxy_internal_server_error.yaml  proxy_parameters.yaml  proxy_unofficial_status.yaml
proxy/qubes/: securedrop.Proxy
proxy/securedrop_proxy/: entrypoint.py  json.py  main.py  proxy.py  version.py
proxy/src/: config_env.rs  config_qubesdb.rs  main.rs
proxy/tests/: conftest.py  test_configure_onion_service.py  test_entrypoint.py  test_errors.py  test_json.py  test_proxy.py
(+1294 files in other folders)
