[tool.poetry]
name = "client-tools"
version = "0.0.0"
description = ""
authors = ["SecureDrop Team"]
license = "AGPLv3+"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
bandit = "*"
safety = "*"

[tool.bandit]
exclude_dirs = ["client/tests", "export/tests", "log/tests", "proxy/tests"]
