[tool.poetry]
name = "securedrop-client"
version = "0.0.0"
description = "SecureDrop Workstation client application"
authors = ["SecureDrop Team"]
license = "AGPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "3.1.3"
SQLAlchemy = "^1.3.3"
alembic = "^1.1.0"
arrow = "^0.12.1"
python-dateutil = "^2.7.5"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# In production these two are installed using a system package
# so match those versions exactly
PyQt5 = [
    {version = "=5.15.9", python = ">=3.11"}, # bookworm
]
PyQt5-sip = [
    {version = "=12.11.1", python = ">=3.11"}, # bookworm
]
PyAutoGUI = "*"
babel = "^2.12.1"
diffoscope = "*"
flaky = "*"
mypy = "^1.4.1"
polib = "*"
pyqt5-stubs = "*"
pyotp = "2.8.0"
pytest = "^7.2.0"
pytest-cov = "*"
pytest-mock = "*"
pytest-qt = "^4.2.0"
pytest-random-order = "*"
pytest-vcr = "*"
semgrep = "*"
translate-toolkit = "*"
types-polib = "*"
types-python-dateutil = "*"
types-requests = "^2.31.0"
types-setuptools = "^68.0.0"
