[tool.poetry]
name = "securedrop-client"
version = "0.0.0"
description = "SecureDrop Workstation client application"
authors = ["SecureDrop Team"]
license = "AGPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "3.1.3"
SQLAlchemy = "^1.3.3"
alembic = "^1.1.0"
arrow = "^0.12.1"
python-dateutil = "^2.7.5"

[tool.poetry.group.dev.dependencies]
# In production these two are installed using a system package
# so match those versions exactly
PyQt5 = [
    {version = "=5.15.9", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^5.15.11", python = ">=3.11", platform = "darwin"},
]
PyQt5-Qt5 = [
    {version = "=5.15.2", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^5.15.15", python = ">=3.11", platform = "darwin"},
]
PyQt5-sip = [
    {version = "=12.11.1", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^12.16.1", python = ">=3.11", platform = "darwin"},
]
PyAutoGUI = "*"
babel = "^2.16.0"
diffoscope = "*"
flaky = "*"
mypy = "^1.14.1"
polib = "*"
pyqt5-stubs = "*"
pyotp = "2.9.0"
pytest = "^8.3.4"
pytest-cov = "*"
pytest-mock = "*"
pytest-qt = "^4.4.0"
pytest-random-order = "*"
semgrep = "*"
translate-toolkit = "*"
types-polib = "*"
types-python-dateutil = "*"
types-setuptools = "^75.8.0"
vcrpy = "^7.0.0"
