[project]
requires-python = ">=3.11"
name = "securedrop-client"
version = "0.0.0"
description = "SecureDrop Workstation client application"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = [
    "Jinja2 >=3.1.6, <4.0",
    "SQLAlchemy >=1.3.3, <2.0",
    "alembic >=1.1.0, < 2.0",
    "arrow >=0.12.1, < 1.0",
    "python-dateutil >=2.7.5, <3.0"
]

[tool.poetry]
requires-poetry = ">=2.1.0,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
# In production these two are installed using a system package
# so match those versions exactly
PyQt5 = [
    {version = "=5.15.9", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^5.15.11", python = ">=3.11", platform = "darwin"},
]
PyQt5-Qt5 = [
    {version = "=5.15.2", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^5.15.15", python = ">=3.11", platform = "darwin"},
]
PyQt5-sip = [
    {version = "=12.11.1", python = ">=3.11", platform = "linux"}, # bookworm
    {version = "^12.16.1", python = ">=3.11", platform = "darwin"},
]
PyAutoGUI = "*"
babel = "^2.18.0"
diffoscope = "*"
flaky = "*"
mypy = "^1.19.1"
polib = "*"
pyqt5-stubs = "*"
pyotp = "2.9.0"
pytest = "^9.0.2"
pytest-cov = "*"
pytest-mock = "*"
pytest-qt = "^4.5.0"
pytest-random-order = "*"
translate-toolkit = "*"
types-polib = "*"
types-python-dateutil = "*"
types-setuptools = "^80.10.0"
vcrpy = "^8.1.1"
paracelsus = "^0.15.0"

[tool.paracelsus]
base = "securedrop_client.db:Base"
