[project]
requires-python = ">=3.11"
name = "securedrop-export"
version = "0.0.0"
description = "SecureDrop Qubes export scripts"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = ["pexpect >= 4.9.0, <5.0"]

[tool.poetry]
requires-poetry = ">=2.1.0,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
types-setuptools = "^80.9.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
semgrep = "^1.131.0"
types-pexpect = "^4.9.0.20250516"
pygobject-stubs = "*"

[tool.mypy]
python_version = "3.11"
