[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "securedrop-export"
version = "0.0.0"
description = "SecureDrop Qubes export scripts"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = ["pexpect >= 4.9.0, <5.0"]

[project.scripts]
send-to-usb = "securedrop_export.main:entrypoint"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.poetry]
requires-poetry = ">=2.3.3,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-setuptools = "^82.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
types-pexpect = "^4.9.0.20260127"
pygobject-stubs = "*"

[tool.mypy]
python_version = "3.13"
