[tool.poetry]
name = "securedrop-keyring"
version = "0.0.0"
description = "SecureDrop keyring"
authors = ["SecureDrop Team"]
license = "AGPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python-debian = "0.1.49"
pysequoia = "0.1.24"
pytest = "^7.2.0"
