[project]
requires-python = ">=3.11"
name = "securedrop-keyring"
version = "0.0.0"
description = "SecureDrop keyring"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = []

[tool.poetry]
requires-poetry = ">=2.1.3,<3.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
python-debian = "0.1.49"
pysequoia = "0.1.24"
pytest = "^7.2.0"
