[tool.poetry]
name = "securedrop-log"
version = "0.0.0"
description = "SecureDrop Qubes logging scripts"
authors = ["SecureDrop Team"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "=3.3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-redis = "<5"
types-setuptools = ">=68,<70"

[tool.mypy]
python_version = "3.11"
scripts_are_modules = true
files = [
    "*.py",
    "securedrop-log",
    "securedrop-log-saver",
    "securedrop-redis-log",
]
