[project]
requires-python = ">=3.11"
name = "securedrop-log"
version = "0.0.0"
description = "SecureDrop Qubes logging scripts"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = ["redis==3.3.11"]

[tool.poetry]
requires-poetry = ">=2.1.0,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-redis = "<5"
types-setuptools = ">=68,<81"

[tool.mypy]
python_version = "3.11"
scripts_are_modules = true
files = [
    "*.py",
    "log_server/log_saver.py",
    "log_server/redis_log.py",
]
