[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "securedrop-log"
version = "0.0.0"
description = "SecureDrop Qubes logging scripts"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"

[project.scripts]
securedrop-log-saver = "log_server.log_saver:main"
securedrop-redis-log = "log_server.redis_log:main"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.poetry]
requires-poetry = ">=2.3.3,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
# In production these are installed using a system package, so match
# those versions directly
redis = [
    {version = "=4.3.4", python = "<3.12"}, # bookworm
    {version = "=6.1.0", python = ">=3.12"}, # trixie
]
mypy = "^1.19.1"
types-redis = "<5"
types-setuptools = ">=68,<83"
fakeredis = "^2.36.0"
pyfakefs = "^6.2.0"
pytest = "^9.0.3"

[tool.mypy]
python_version = "3.11"
scripts_are_modules = true
files = [
    "*.py",
    "log_server/log_saver.py",
    "log_server/redis_log.py",
]
