[project]
name = "securedrop-proxy"
requires-python=">=3.11"
version = "0.1.0"
description = "Qubes RPC proxy service for the SecureDrop Client"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"
dependencies = []

[tool.poetry]
requires-poetry = ">=2.1.0,<3.0.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-httpbin = "^2.1.0"
